# hpc-jump

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: config.toml
hpc_jump/: __init__.py  cli.py  config.py  diag.py  doctor.py  slurm.py  ssh_config.py  templates.py  vscode.py
