[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hjump"
version = "0.2.0"
description = "Open VS Code Remote-SSH on a Slurm compute node via ProxyJump."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
]

[project.scripts]
hjump = "hpc_jump.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["hpc_jump"]
